--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,10 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "olaph"
-version = "0.1.0"
+version = "0.1.2"
 description = "A multilingual phonemizer combining lexica, NLP, and probabilistic scoring for improved phonemization accuracy.."
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.10"
 license = { text = "MIT" }
 
 authors = [
@@ -38,11 +38,7 @@ dependencies = [
   "colorama==0.4.6",
   "confection==0.1.5",
   "cymem==2.0.11",
-  "de-core-news-sm",
   "docopt==0.6.2",
-  "en-core-web-sm",
-  "es-core-news-sm",
-  "fr-core-news-sm",
   "idna==3.10",
   "jinja2==3.1.6",
   "langcodes==3.5.0",
@@ -82,8 +78,7 @@ Documentation = "https://github.com/iisys-hof/olaph#readme"
 Issues = "https://github.com/iisys-hof/olaph/issues"
 
 [tool.setuptools.packages.find]
-where = ["."]
-include = ["olaph*"]
+where = ["src"]
 
 [tool.setuptools.package-data]
 "olaph" = ["dictionaries/**/*.txt"]
