--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "olaph"
-version = "0.1.2"
+version = "0.1.3"
 description = "A multilingual phonemizer combining lexica, NLP, and probabilistic scoring for improved phonemization accuracy.."
 readme = "README.md"
 requires-python = ">=3.10"
@@ -70,6 +70,7 @@ dependencies = [
   "wasabi==1.1.3",
   "weasel==0.4.1",
   "wrapt==1.17.3",
+  "pytest"
 ]
 
 [project.urls]
@@ -91,3 +92,8 @@ fr-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/do
 
 [project.optional-dependencies]
 dev = ["pytest", "black", "flake8"]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+pythonpath = ["src"]
+addopts = "-v --tb=short"
